# vulcan-soa-connectathon-37

./: .gitignore  June2025.md  QUICKSTART.md  README.md  example.env  pyproject.toml  pyrefly.toml  run_ui.sh
.github/workflows/: main.yml  v4.yml  v6.yml
ig/VulcanSoAConnecthathon37/input/fsh/: research.fsh
ig/VulcanSoAConnecthathon37/input/pagecontent/: index.md
igv4/VulcanSoAConnecthathon37/: ig.ini  sushi-config.yaml
igv4/VulcanSoAConnecthathon37-r4/input/fsh/: aliases.fsh  research.fsh
igv4/VulcanSoAConnecthathon37-r4/input/pagecontent/: index.md
igv4/VulcanSoAConnecthathon37/input/fsh/: aliases.fsh
igv6/VulcanSoAConnecthathon37-r6/: ig.ini
igv6/VulcanSoAConnecthathon37-r6/VulcanSoAConnectathonIG37/: sushi-config.yaml
src/: beda.md
src/tasks/: common.py  config.py  cycles.py  enroll_patient.py  evaluate.py  execute.py  report.py  ui.py  workbook.ipynb
src/tasks/fhirsdk/: __init__.py  client.py
src/tasks/fhirsdk/hl7_fhir_r6_core/: __init__.py  account.py  activity_definition.py  actor_definition.py  administrable_product_definition.py  adverse_event.py  allergy_intolerance.py  appointment.py  appointment_response.py  artifact_assessment.py  audit_event.py  base.py  basic.py  binary.py  biologically_derived_product.py  biologically_derived_product_dispense.py  body_structure.py  bundle.py  canonical_resource.py  capability_statement.py  care_plan.py  care_team.py  charge_item.py  charge_item_definition.py  citation.py  claim.py  claim_response.py  clinical_assessment.py  clinical_use_definition.py  code_system.py  communication.py  composition.py  (+136 more)
(+117 files in other folders)
