[tool.poetry]
name = "vulcan-soa-connectathon-37"
version = "0.1.0"
description = ""
authors = ["Geoff Low <glow@mdsol.com>"]
readme = "README.md"
packages = [ {include = "tasks", from = "src"} ]

[tool.poetry.dependencies]
python = ">=3.12,<3.14.1 || >3.14.1,<4.0"
pyjwt = "^2.10.1"
fhir-resources = "^8.1.0"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
pydantic = "^2.12.5"
types-requests = "^2.32.4.20250913"
pyrefly = "^0.46.3"
jupyterlab = "^4.5.1"
matplotlib = "^3.10.8"
networkx = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.5.1,<8.0.0)"
]
